# cinem

./: .gitignore  CMakeLists.txt  README.md
cinem/: CMakeLists.txt  cinem.cpp  films.db  sql.cpp  sql.h
scripts/: ddl.sql
